[package]
name = "blackbox"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
cpal = { version = "0.15.3", features = ["asio", "jack"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
hound = "3.5.1"
ringbuf = "0.4.7"

[[bench]]
name = "rb_bench"
path = "benches/rb_benchmark.rs"
harness = false
